add title styles

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--insert fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Big+Shoulders+Stencil+Display:wght@100&family=Caveat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@100&family=Caveat:wght@600&display=swap" rel="stylesheet">
+    
+    <!-- insert css link -->
     <link href="resources/css/styles.css" type=" text/css" rel="stylesheet">
 
-    <!-- insert css link -->
     <title>Imperfect Adventures</title>
+
+    
 </head>
 <body>
+
+    <!-- header TITLE -->
+    <div class="title">Imperfect Adventures</div>
     <!-- insert top navigation -->
 
 
