--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
     <a href="#" class="navbar-brand"><b>
         <!-- header TITLE -->
-    <div class="title">Imperfect Adventures</div>
+        <a href="index.html"><div class="title">Imperfect Adventures</a> </div>
     <!-- insert top navigation -->
     </b></a>  		
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
